apex-trigger-handler/objects/Trigger_Switch__mdt/Trigger_Switch__mdt.object-meta.xml
<CustomObject>
    <description>Global switches to turn on/off specified SObject triggers or specified trigger handler classes by name.</description>
    <label>Trigger Switch</label>
    <pluralLabel>Trigger Switches</pluralLabel>
</CustomObject>