apex-trigger-handler/objects/Trigger_Switch__mdt/fields/Context_Name__c.field-meta.xml
<CustomField>
    <fullName>Context_Name__c</fullName>
    <description>The name of the context to turn on/off. Can be both an SObject OR a specified trigger handler class name (i.e. &quot;Content__c&quot; or &quot;AssetValidationHandler&quot;).</description>
    <inlineHelpText>The name of the context to turn on/off. Can be both an SObject OR a specified trigger handler class name (i.e. &quot;Content__c&quot; or &quot;AssetValidationHandler&quot;).</inlineHelpText>
    <label>Context Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>