apex-trigger-handler/objects/Trigger_Switch__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this trigger or handler is active.</description>
    <inlineHelpText>Whether or not this trigger or handler is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>