apex-trigger-handler/objects/Trigger_Switch__mdt/fields/User_Emails_to_Skip__c.field-meta.xml
<CustomField>
    <fullName>User_Emails_to_Skip__c</fullName>
    <description>A semi-colon delimited list of User emails to skip during processing. Triggers for specified SObjects or trigger handlers will not fire when invoked by Users with these emails (i.e. mat.ruff@builtin.com;michael.engler@builtin.com)</description>
    <inlineHelpText>A semi-colon delimited list of User emails to skip during processing. Triggers for specified SObjects or trigger handlers will not fire when invoked by Users with these emails (i.e. mat.ruff@builtin.com;michael.engler@builtin.com)</inlineHelpText>
    <label>User Emails to Skip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>